WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
30840
LayoutTests/http/tests/security/canvas-remote-read-remote-image.html fails
https://bugs.webkit.org/show_bug.cgi?id=30840
Summary
LayoutTests/http/tests/security/canvas-remote-read-remote-image.html fails
Chris Marrin
Reported
2009-10-27 16:32:45 PDT
My fix for
bug 30349
broke the above test. The fix is forthcoming.
Attachments
Patch
(1.15 KB, patch)
2009-10-27 16:37 PDT
,
Chris Marrin
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Marrin
Comment 1
2009-10-27 16:37:44 PDT
Created
attachment 41994
[details]
Patch
Simon Fraser (smfr)
Comment 2
2009-10-27 17:22:08 PDT
http://trac.webkit.org/changeset/50186
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug