2009-10-27  Chris Marrin  <cmarrin@apple.com>

Reviewed by Oliver Hunt.

        Fixed a bug where I was using the wrong Canvas pointer to do a cross-domain check
        https://bugs.webkit.org/show_bug.cgi?id=30840

        * html/canvas/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::drawImage):

Canonical link: https://commits.webkit.org/41631@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50186 268f45cc-cd09-0410-ab3c-d52691b4dbfc